# laptop_recommender

./: .env.example  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
accounts/: mixins.py  models.py  signals.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_profile.py
catalog/: admin.py  csv_import.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_brand_gpu_processor_remove_laptop_processor_tier_and_more.py  0003_subbrand.py  0004_laptop_sub_brand.py
catalog/tests/: test_csv_import.py  test_generator.py  test_import_views.py  test_models.py  test_views.py
clustering/: admin.py  apps.py  calc_views.py  engine.py  models.py  plots.py  services.py  urls.py  views.py
clustering/migrations/: 0001_initial.py  0002_remove_plot_fields.py
clustering/templatetags/: calc_tags.py
clustering/tests/: test_evaluate.py  test_models.py  test_preprocess.py  test_services.py  test_train.py  test_views.py
config/: settings.py  urls.py
core/: plots.py  urls.py  views.py
core/tests/: test_about.py  test_views.py
datatable/: apps.py  mixins.py
datatable/templatetags/: datatable_tags.py
datatable/tests/: test_mixins.py
design-system/: MASTER.md
design-system/pages/: clustering.md  landing.md  login.md  recommend.md
recommender/: admin.py  engine.py  exports.py  forms.py  models.py  profiles.py  services.py  urls.py  views.py
recommender/migrations/: 0001_initial.py  0002_alter_preference_brand_preference.py  0003_preference_sub_brand_preference_and_more.py
templates/: base.html
(+83 files in other folders)
