[project]
name = "laptop-recommender"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=5.0,<6.0",
    "django-allauth>=65.18.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
